Closed Bug 298742 Opened 21 years ago Closed 21 years ago

intl.properties's "intl.menuitems.alwaysappendaccesskeys" is ignored always

Categories

(Core :: Internationalization, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla1.8beta3

People

(Reporter: masayuki, Assigned: masayuki)

Details

(Keywords: intl, regression)

Attachments

(1 file)

intl.properties's "intl.menuitems.alwaysappendaccesskeys" is ignored always. Because nsTextBoxFrame.cpp is using nsContentUtils::GetCharPref, but we should use nsContentUtils::GetLocalizedStringPref. It is regression of bug 240543.
Attached patch Patch rv1.0Splinter Review
Attachment #187268 - Flags: review?(jst)
Status: NEW → ASSIGNED
Priority: -- → P1
Target Milestone: --- → mozilla1.8beta3
Flags: blocking-aviary1.1?
Flags: blocking-aviary1.1? → blocking1.8b3?
Comment on attachment 187268 [details] [diff] [review] Patch rv1.0 r=jst
Attachment #187268 - Flags: review?(jst) → review+
Attachment #187268 - Flags: superreview?(peterv)
Comment on attachment 187268 [details] [diff] [review] Patch rv1.0 sr=shaver
Attachment #187268 - Flags: superreview?(peterv) → superreview+
Attachment #187268 - Flags: approval1.8b3+
checked-in, thanks,
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Flags: blocking1.8b3?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: