Bug 298742 intl.properties's "intl.menuitems.alwaysappendaccesskeys" is ignored always r=jst, sr=shaver, a=benjamin